// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snapshot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-title"
    >
      Carlos
    </h1>
    <h3>
      Muñoz
    </h3>
    <p
      class="mi-clase-favorita"
    >
      The Legend of Zelda, Super Mario, Pokemon
    </p>
    <p>
      4
    </p>
    <h1>
      Inactive
    </h1>
    <p
      style="background-color: rgb(250, 250, 250); border-radius: 0; padding: 10px;"
    >
      {"zipCode":"ABC-123","country":"Canada"}
    </p>
  </div>
</div>
`;

exports[`MyAwesomeApp > should match snapshot2 1`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-title"
  >
    Carlos
  </h1>
  <h3>
    Muñoz
  </h3>
  <p
    class="mi-clase-favorita"
  >
    The Legend of Zelda, Super Mario, Pokemon
  </p>
  <p>
    4
  </p>
  <h1>
    Inactive
  </h1>
  <p
    style="background-color: rgb(250, 250, 250); border-radius: 0; padding: 10px;"
  >
    {"zipCode":"ABC-123","country":"Canada"}
  </p>
</div>
`;
